docs: add another information in the index.html: experience, education, skills

--- a/index.html
+++ b/index.html
@@ -54,6 +54,69 @@
       </ul>
       </p>
     </section>
+
+    <section class="experience">
+      <h2>Profession experience</h2>
+      <p class="job">
+        <strong>Website Information Administrator</strong><br>
+        National University "Odessa Law Academy"<br>
+        (June 2017 - current time)
+      </p>
+    </section>
+
+    <section class="education">
+      <h2>
+        Education
+      </h2>
+
+      <p class="education-descr">
+        <strong>Bachelor in Law</strong><br>
+        National University "Odessa Law Academy"<br>
+        (09.2016 - 07.2020)
+      </p>
+      <p class="education-descr">
+        <strong>Master - Systems analyst</strong><br>
+        National University "Odessa Law Academy"<br>
+        (09.2020 - 02.2022)
+      </p>
+      <p class="education-descr">
+        <strong>Front-End Basic (layout)</strong><br>
+        Hillel IT-School<br>
+        <a href="https://certificate.ithillel.ua/view/98625085">Certificate</a><br>
+        (09.2020 - 12.2020)
+      </p>
+      <p class="education-descr">
+        <strong>Front-End Pro Course (javascript)</strong><br>
+        Hillel IT-School<br>
+        <a href="https://certificate.ithillel.ua/view/45941247">Certificate</a><br>
+        (02.2021 - 06.2021)
+      </p>
+
+      <h3>My English knowledge</h3>
+      <p>English - Pre-Intermediate</p>
+    </section>
+
+    <section class="my-skills">
+      <h3>Tech Skills</h3>
+      <ul class="list-hard-skills">
+        <li class="item-skills">HTML 5</li>
+        <li class="item-skills">CSS 3</li>
+        <li class="item-skills">JavaScript</li>
+        <li class="item-skills">TypeScript (basic)</li>
+        <li class="item-skills">GIT</li>
+        <li class="item-skills">Webpack</li>
+        <li class="item-skills">Cypress (basic)</li>
+      </ul>
+
+      <h3>Soft Skills</h3>
+      <ul class="list-soft-skills">
+        <li class="item-skills">Teamwork</li>
+        <li class="item-skills">Critical thinking</li>
+        <li class="item-skills">Problem solving</li>
+        <li class="item-skills">Digital literacy</li>
+        <li class="item-skills">Empathy</li>
+      </ul>
+    </section>
   </div>
 </body>
 
