--- a/index.html
+++ b/index.html
@@ -11,35 +11,37 @@
 
 <body>
   <div class="container">
-    <section>
-      <h1>Olena Surilova</h1>
-      <img src="/my-photo.jpg" alt="my avatar" width="300" height="303">
-    </section>
-
+    <h1>Olena Surilova</h1>
     <section class="contact-info">
-      <h2>Contact information</h2>
-      <ul class="list-contact-info">
-        <li class="contact-item">tel:
-          <a href="tel:380661890285" class="contact-link"> +38-066-189-02-85</a>
-        </li>
-        <li class="contact-item">email:
-          <a href="mailto:elen21surilova@gmail.com" class="contact-link">
-            elen21surilova@gmail.com</a>
-        </li>
-        <li class="contact-item">Skype:
-          <a href="https://join.skype.com/invite/bx0Nrj5X8R3Q" class="contact-link">oblap17lena</a>
-        </li>
-        <li class="contact-item">GitHub:
-          <a href="https://github.com/helen25sur" class="contact-link"> @helen25sur</a>
-        </li>
-        <li class="contact-item">LinkedIn:
-          <a href="https://www.linkedin.com/in/elena-surilova-8aa66b122/" class="contact-link">Elena Surilova</a>
-        </li>
-      </ul>
+      <div class="wrapper">
+        <img class="my-avatar" src="/my-photo.jpg" alt="my avatar" width="300" height="303">
+      </div>
+      <div class="wrapper">
+        <!-- <h2>Contact information</h2> -->
+        <ul class="list-contact-info">
+          <li class="contact-item"><b>tel:</b>
+            <a href="tel:380661890285" class="contact-link"> +38-066-189-02-85</a>
+          </li>
+          <li class="contact-item"><b>email:</b>
+            <a href="mailto:elen21surilova@gmail.com" class="contact-link">
+              elen21surilova@gmail.com</a>
+          </li>
+          <li class="contact-item"><b>Skype:</b>
+            <a href="https://join.skype.com/invite/bx0Nrj5X8R3Q" class="contact-link">oblap17lena</a>
+          </li>
+          <li class="contact-item"><b>GitHub:</b>
+            <a href="https://github.com/helen25sur" class="contact-link"> @helen25sur</a>
+          </li>
+          <li class="contact-item"><b>LinkedIn:</b>
+            <a href="https://www.linkedin.com/in/elena-surilova-8aa66b122/" class="contact-link">Elena Surilova</a>
+          </li>
+        </ul>
+
+      </div>
     </section>
 
     <section class="about-me">
-      <p class="about-me-text">My current objective is to change the job and deepen into the area of WEB-development, as
+      <p class="about-me-text">My current objective is to change the job and deepen into the area of web-development, as
         my current occupation has awoken this interest. I have been leading and editing the website of the National
         University “Odessa Law Academy” since 2017 applying HTML and CSS.</p>
       <p class="about-me-text">I have decided to acquire new competencies in order to become a professional. I hope to
